# promptrek

./: .commitlintrc.json  .conventional-changelog.json  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .promptrek.yaml  .safety-project.ini  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  FEATURE_BREAKDOWN_USER_LEVEL_CONFIGS.md  GETTING_STARTED.md  ISSUE_111_FIX.md  Makefile  README.md  UNIVERSAL_PLUGIN_FORMAT_PROPOSAL.md  _config.yml  commitlint.config.js  config.yaml  index.md  mcp.promptrek.json  mkdocs.yml  project.promptrek.yaml  promptrek_spec_command_proposal.md  pyproject.toml  script.sh  test-final.promptrek.yaml  test.apm.yaml  test.promptrek.yaml  typescript  user-guide.md
.claude/: test0.md  test1.md
.continue/rules/: general.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/prompts/: coding.prompt.md
.github/scripts/: determine_labels.py  test_determine_labels.py
.github/workflows/: auto-label.yml  build-validation.yml  build.yml  changelog.yml  ci.yml  commitlint.yml  dependabot.yml  mkdocs.yml  nightly.yml  pages.yml  pr-title-lint.yml  pr.yml  pypi.yml  release.yml  security.yml  test-matrix.yml  test.yml  vscode-extension-ci.yml  vscode-extension-package.yml  vscode-extension-release.yml
.venv-build/: pyvenv.cfg
_layouts/: default.html
assets/: promptrek-logo-with-text.ai
assets/css/: style.scss
docs/: ADAPTERS.md  ADAPTER_CAPABILITIES.md  ADVANCED_FEATURES.md  ARCHITECTURE.md  CHANGELOG_PROCESS.md  COMMITLINT.md  CORRECTED_EDITOR_RESEARCH.md  CRITICAL_FIXES_PLAN.md  EDITOR_CONFIGURATION_ANALYSIS.md  EDITOR_RESEARCH.md  IMPLEMENTATION_ROADMAP.md  MCP-USER-GUIDE.md  PLANNING.md  PRE_COMMIT.md  PROJECT_STRUCTURE.md  SYNC_FEATURE.md  UPF_SPECIFICATION.md  UV_WORKFLOWS.md  V3_MIGRATION_GUIDE.md  index.md
docs/api/: index.md
docs/cli/: index.md  interactive.md
docs/community/: code-of-conduct.md  contributing.md  feedback.md  support.md
docs/developer/: architecture.md  changelog-process.md  contributing.md  index.md  project-structure.md
docs/examples/: index.md
docs/getting-started/: basic-usage.md  first-project.md  installation.md  quick-start.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js
docs/reference/: changelog.md  deprecation.md  faq.md  glossary.md  tags.md  troubleshooting.md
docs/schema/: index.md  v3.0.0.md  v3.1.0.md
docs/stylesheets/: extra.css
examples/: mcp.promptrek.json  variables.promptrek.yaml.example
gh-pages/: 404.md  CNAME  Gemfile  _config.yml  contributing.md  feedback.md  index.md  quick-start.md  user-guide.md
scripts/: README.md  check_generated_files.py  generate-changelog.sh  generate_schemas.py  generate_v31_schema.py  release-rc.sh  release.sh  test_schemas.py
tests/: conftest.py
vscode-extension/: .eslintrc.json  CHANGELOG.md  CLI-SETUP.md  CONTRIBUTING.md  CRITICAL-FIX.md  DEBUG.md  DEVELOPMENT.md  F5-TROUBLESHOOTING.md  INSTALLATION.md  QUICKSTART.md  README.md  RELEASE.md  TESTING.md  dev.sh  package.json  test-setup.sh
(+279 files in other folders)
